# SeAN

./: .gitignore  CMakeLists.txt  Makefile  README.md  doppler_crosssection_fft_test.py
atomic_mass/: mass_list.txt
beam/: beam.txt
cross_section/: cross_section.txt  flat.txt
doc/: Doxyfile  Makefile  references.bib  theory.tex
examples/: 156Gd_NRF  27Al  6Li_NRF  6Li_RSA  sample_input
examples/basic/: 112Sn_NRF_Al  112Sn_NRF_Co  112Sn_NRF_Sn  112Sn_NRF_al_do  112Sn_NRF_al_up  112Sn_NRF_co_do  112Sn_NRF_co_up  112Sn_NRF_sn  6Li_NRF  6Li_RSA
examples/phdos/: 27Al_Debye  27Al_phdos
future/: CMakeLists.txt  Doxyfile  bibliography.bib
future/include/: Constants.h  ExcitedState.h  Grid.h  Integrator.h  Nucleus.h  Target.h  TestUtilities.h  VoigtProfile.h
future/src/: CMakeLists.txt  ExcitedState.cc  Grid.cc  Integrator.cc  Nucleus.cc  Target.cc  VoigtProfile.cc  main.cc
future/test/: test_excited_state.cc  test_grid.cc  test_integrator.cc  test_integrator_2d.cc  test_nucleus.cc  test_target.cc  test_voigt_profile.cc
include/: Absorption.h  Config.h  Config.h.in  CrossSection.h  Experiment.h  InputFileReader.h  InputReader.h  Integrator.h  LoopSettings.h  PhononDensity.h  Plotter.h  Settings.h  Status.h  Target.h  Writer.h
mass_attenuation/: mass_attenuation.txt
output/: OUTPUT_README
src/: .InputFileReader.cpp.swp  .Target.cpp.swp  Absorption.cpp  CMakeLists.txt  CrossSection.cpp  Experiment.cpp  InputFileReader.cpp  InputReader.cpp  Integrator.cpp  LoopSettings.cpp  PhononDensity.cpp  Plotter.cpp  SeAN.cpp  Settings.cpp  Status.cpp  Target.cpp  Writer.cpp  main.cpp
unit_tests/: doppler_crosssection_fft_test.py  unit_test_crosssection  unit_test_integration
velocity_distribution/: velocity_distribution.txt
